--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"kysely": "^0.27.4",
 		"lodash-es": "^4.17.21",
 		"nanoid": "^5.0.7",
-		"svelte-gestures": "^5.0.4"
+		"svelte-gestures": "^5.0.4",
+		"svelte-persisted-store": "^0.11.0"
 	}
 }
