--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"lodash-es": "^4.17.21",
 		"nanoid": "^5.0.7",
 		"svelte-gestures": "^5.0.4",
+		"svelte-multiselect": "^10.3.0",
 		"svelte-persisted-store": "^0.11.0"
 	}
 }
